--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "jest-testing",
+  "name": "todo-cli",
   "version": "1.0.0",
-  "description": "",
+  "description": "My Todo-cli application",
   "main": "todo.js",
   "scripts": {
     "test": "jest",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint",
-      "prettier --write ."
-    ]
+    "prepare": "cd .. && husky install todo-cli/.husky"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.26.0",
-    "husky": "^8.0.1",
-    "jest": "^29.1.2",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "husky": "^8.0.3",
+    "jest": "^29.4.3"
   }
 }
